@@ -37,8 +37,8 @@ installed system, and running the NetBSD test suite.
 .Pp
 The NetBSD ports currently supported as targets (i.e., as the system
 to install and run under emulation) are i386, amd64, sparc, sparc64,
-evbarm-earmv7hf, evbarm-aarch64, pmax, hpcmips, vax, hppa, macppc, and
-alpha.  The host (the system running
+evbarm-earmv7hf, evbarm-aarch64, pmax, hpcmips, vax, hppa, macppc,
+alpha, and riscv-riscv64.  The host (the system running
 .Nm )
 can be any NetBSD port or even a different Unix-like system such
 as Linux, FreeBSD, or macOS.
@@ -56,15 +56,16 @@ they use an ISO image instead of a directory containing boot floppies and sets:
 .Pp
 .Dl anita install http://ftp.netbsd.org/pub/NetBSD/iso/9.3/NetBSD-9.3-sparc.iso
 .Pp
-The evbarm ports do not currently support installation
+The evbarm and riscv ports do not currently support installation
 using sysinst, so anita will instead install them by decompressing
 the pre-built disk image from the release onto the beginning
 of the virtual disk.  The target will then be rebooted to trigger
 the automatic image resizing that happens on first boot,
-and after that, the evbarm ports work the same as the other ports.
-To download an evbarm image, use a command like the following:
+and after that, these ports work the same as the other ports.
+To download an evbarm or riscv image, use a command like the following:
 .Pp
 .Dl anita install http://nycdn.netbsd.org/pub/NetBSD-daily/HEAD/latest/evbarm-aarch64/
+.Dl anita install http://nycdn.netbsd.org/pub/NetBSD-daily/HEAD/latest/riscv-riscv64/
 .Pp
 To boot the newly installed hard disk image and get a login prompt,
 replace
